# LightDBMS

./: .gitignore  CMakeLists.txt  Events.h  FiniteStateMachine.cpp  FiniteStateMachine.h  Lexem.h  Machine.h  Makefile  README.md  lexem.cpp  lexem.h  syntax_analyser.cpp  syntax_analyser.h  syntax_tree.cpp  syntax_tree.h  test_syntax_analyser.cpp
